# mrdja

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  test.py  test2.py
doc/: requirements.txt
doc/source/: changelog.rst  conf.py  index.rst
mrdja/: drawing.py  geometry.py  matplot3d.py  pointcloud.py  procrustes.py  ransaclp.py  ransaclpexperiments.py  ransacutils.py  sampling.py  stats.py
mrdja/clustering/: __init__.py  clustering.py  example.py
mrdja/drawing/: __init__.py
mrdja/experiments/: add_maximum_to_means_dicts.py  check_distance_two_versions.py  cli_for_all.sh  cli_for_segmenting_with_open3d.py  convert_means_to_percentages.py  draw_for_paper.py  draw_inliers_from_number_iteration_RANSAC.py  draw_inliers_from_number_iteration_RANSAC_line.py  draw_inliers_from_number_iteration_RANSAC_line_and_fit_plane.py  example_cuda_plane.py  example_cuda_plane_2.py  example_cuda_plane_3.py  example_perpendicular_vectors_plane.py  example_visualize_pcd_in_plt.py  example_ward.py  experiment_RANSAC_lines_fitting_plane.py  experiment_RANSAC_lines_fitting_plane_2.py  experiment_all_files_Open3D_RANSAC_lines_fitting_plane.py  experiment_all_files_S3DIS_RANSAC_lines_fitting_plane.py  experiment_cuda_RANSAC_lines_fitting_plane_2.py  experiment_one_file_Open3D_RANSAC_lines_fitting_plane.py  experiment_one_file_Open3D_RANSAC_lines_fitting_plane_CUDA.py  experiment_summary_Open3D_RANSAC_lines_fitting_plane.py  (+19 more)
open3d_ransac_reproducibility/: Dockerfile  README.md  generate.sh  plane_test.py
results_experiments_ransaclp/: README.txt  results_baseline_S3DIS.pkl
(+417 files in other folders)
