[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mrdja"
version = "0.0.13"
authors = [
  { name="José María Martínez Otzeta", email="jmartinezot@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/mrdja"
"Bug Tracker" = "https://github.com/pypa/mrdja/issues"

[tool.poetry.dependencies]
sphinx-automodapi = "*"
